--- a/manifests/pip-cache/Chart.yaml
+++ b/manifests/pip-cache/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-name: pip_cache
+name: pip-cache
 type: application
 version: 1.0.0
 dependencies:
-  - name: app1
+  - name: pip-cache
     version: "0.1.0"
     repository: "https://www.joseenriqueruiznavarro.com/helm-charts/pip-cache"
